[package]
name = "networking-runtime"
edition = "2021"
version = "0.1.0"
authors = ["Joel DSouza <joeldsouzax@gmail.com>"]

[dependencies]
anyhow = "1.0.70"
async-native-tls = "0.5.0"
async-task = "4.7.1"
flume = "0.11.1"
futures-lite = "2.3.0"
http = "0.2.9"
hyper = { version = "0.14.26", features = ["http1", "http2", "client", "runtime"] }
smol = "1.3.0"
tokio = "1.14.0"
